Fixes Data Preview Not Showing

--- a/packages/editor/src/scss/data-import.scss
+++ b/packages/editor/src/scss/data-import.scss
@@ -235,7 +235,7 @@
     }
   }
   .right-col {
-    position: relative;
+    position: absolute;
     background-color: $lightest-gray;
     padding: $gbl-padding;
     width: 50% !important;
